Version 6.0.2
- Fixed an internal error where BASIC array references sometimes look like calls

Version 6.0.1
- Added missing file for LittleFS file system.

Version 6.0.0
- Added interpreter and code size printing if --sizes is given
- Added atof() and strtof() functions
- Added %p format flag to printf
- Allow newlines inside BASIC initializations
- Automatically reset baud rate on _clkset()
- Disabled SIMPLE_IO printf optimization because it was interacting poorly with symbol resolution
- Fixed _ assignment in nucode output
- Fixed calculation of FVAR/FVARS when labels are unknown
- Fixed a problem with unnamed parameters not being counted in code generation
- Fixed _getus() and _getms() in -2nu
- Fixed _waitms and _waitus timing
- Fixed type of `_clkmode` on P2 (it was byte instead of long)
- Fixed compilation error on some signed multiplies
- Fixed calling varargs functions from Spin in bytecode
- Fixed BASIC LINE INPUT when no explicit file handle is given
- Fixed umount of SD card to clear pins in use
- Implemented _muldiv64 for bytecode
- Made Spin2 loop behaviour match that of other languages (like PNut v38)
- Optimized nucode output considerably
- Passing a NULL pointer to mount() now causes an error, rather than unmounting
- Some internal cleanups in the code generators

Version 5.9.28
- Added some simple loop optimizations to transform loops into DJNZ form at level -O1
- Fixed incorrect code generated sometimes for fetching the upper 32 bits of a 64 bit function result.
- Fixed REV operator in nucode output
- Improved performance of nucode generated code
- Optimized P1 multiply code (thanks to Ada for this)

Version 5.9.27
- Added some more missing functions from libc
- Added some additional asm optimizations thanks to Ada
- Fixed an out of memory crash due to nested structs in -O0
- Fixed assembly warnings that were accidentally broken
- Made more fatfs options settable on the command line (thanks, Ada)