@@ -1,5 +1,6 @@
 Version 6.0.2
 - Fixed an internal error where BASIC array references sometimes look like calls
+- Fixed some spurious warnings about 0-0 style operands in inline assembly
 
 Version 6.0.1
 - Added missing file for LittleFS file system.
